[gd_scene load_steps=3 format=3 uid="uid://3bpm0epeg63e"]

[ext_resource type="Script" path="res://scripts/ui/LevelSelector.gd" id="2"]
[ext_resource type="Theme" uid="uid://pfjjbicdjjbw" path="res://default.tres" id="3"]

[node name="LevelSelector" type="CanvasLayer"]
script = ExtResource("2")

[node name="Text" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 64.0
theme = ExtResource("3")
text = "Choose A Level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Levels" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LevelButton" type="Button" parent="Levels"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -105.0
offset_right = 360.0
offset_bottom = 105.0
theme = ExtResource("3")
text = "Level"
icon_alignment = 1

[node name="LeftButton" type="Button" parent="Levels"]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -105.0
offset_right = 176.0
offset_bottom = 105.0
theme = ExtResource("3")
text = "<"
icon_alignment = 1

[node name="RightButton" type="Button" parent="Levels"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -105.0
offset_right = -100.0
offset_bottom = 105.0
theme = ExtResource("3")
text = ">"
icon_alignment = 1

[node name="ExitButton" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_right = 268.0
theme = ExtResource("3")
text = "Exit"

[connection signal="pressed" from="Levels/LevelButton" to="." method="_on_LevelButton_pressed"]
[connection signal="pressed" from="Levels/LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="Levels/RightButton" to="." method="_on_RightButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
